adicao da funcao nenhum favorito

--- a/index.html
+++ b/index.html
@@ -37,7 +37,19 @@
             <tbody>
                 
             </tbody>
-            <tfoot></tfoot>
+            <tfoot>
+               <tr id="nodisplay" class="nodisplay">
+                <td></td>
+                <td>
+                    <img src="./assets/star.svg" alt="">
+                </td>
+                <td>
+                    <span>Nenhum favorito ainda</span>
+                </td>
+                <td></td>
+                </td>
+               </tr>
+            </tfoot>
         </table>
     </div>
     </div>
