correção na função checkEmpty

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 
             </tbody>
             <tfoot>
-               <tr id="nodisplay" class="nodisplay">
+               <tr id="nodisplay" class="nodisplay close">
                 <td></td>
                 <td>
                     <img src="./assets/star.svg" alt="">
